deploy-config/k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: ink-website
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: ink-website

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ot-minisite-ingress
spec:
  rules:
    - host: test-abao.ink.cn
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: ink-website
                port:
                  number: 80
  tls:
    - hosts:
        - test-abao.ink.cn
      secretName: ink.cn
